# blockpuzzle

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  board.cpp  board.hpp  main.cpp  matrix.hpp  piece.hpp
src/app_raylib/: CMakeLists.txt  main.cpp
src/blockpuzzle/: CMakeLists.txt  board.cpp  board.hpp  game.cpp  game.hpp  piece.cpp  piece.hpp  rng.cpp  rng.hpp
src/cursespp/: CMakeLists.txt  cursespp.cpp  cursespp.hpp
src/geom/: CMakeLists.txt  matrix.hpp
